working on the header

--- a/mainpage.html
+++ b/mainpage.html
@@ -10,6 +10,8 @@
 
 <body>
     <header>
+        <h1> Casey Dragon</h1>
+        <h2>designer at web</h2>
         <nav>
             <a href="mainpage.html"> Home </a>
             <a href="aboutme.html">About Me</a>
