--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="style.css">
     <title>Casey Dragon</title>
 </head>
 
@@ -13,7 +13,7 @@
         <h1> Casey Dragon</h1>
         <h2>designer at web</h2>
         <nav>
-            <a href="mainpage.html"> Home </a>
+            <a href="index.html"> Home </a>
             <a href="aboutme.html">About Me</a>
                 <!-- potentially a drop down menu connecting to about me, contact me -->
             <a href="resume.html">Resume</a>
